--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "pandas>=3.0.0",
     "pyinstaller>=6.18.0",
     "pyodbc>=5.3.0",
+    "pybamm>=24.11",
     "pyqt6>=6.10.2",
     "scipy>=1.17.0",
     "xlwings>=0.33.20",
